name:                es-reindex
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/pavelkogan/es-reindex#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Kogan
maintainer:          pkogan@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable es-reindex
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , basic-prelude
                     , bloodhound >= 0.10
                     , bytestring
                     , conduit-combinators
                     , data-default-generics
                     , http-client
                     , http-types
                     , mtl
                     , text
                     , time
                     , turtle
                     , vector
